bitnami_argo-cd/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-cd
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.argocd.local.anundsson.net`)
      kind: Rule
      services:
        - name: argocd-argo-cd-server
          port: 443
    - match: Host(`argocd.local.anundsson.net`)
      kind: Rule
      services:
        - name: argocd-argo-cd-server
          port: 443
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: local-anundsson-net-staging-tls
